--- a/EducationalSystem.WebAPI/EducationalSystem.WebAPI.csproj
+++ b/EducationalSystem.WebAPI/EducationalSystem.WebAPI.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" /> 	
   </ItemGroup>
