Task 3 in progress

--- a/EducationalSystem.WebAPI/EducationalSystem.WebAPI.csproj
+++ b/EducationalSystem.WebAPI/EducationalSystem.WebAPI.csproj
@@ -23,5 +23,8 @@
  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+ <ItemGroup>
+   <Folder Include="wwwroot\scripts\" />
+ </ItemGroup>
 
 </Project>
